[package]
name = "navigator-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = "0"
async-trait="0.1"
# pingora = { version = "0.3", features = [ "lb", "proxy" ] }
# pingora ={ git = "https://github.com/escoffier/pingora", branch = "netns1" }
pingora ={ git = "https://github.com/escoffier/pingora", rev = "ac71630159ee427b93f593341f3a929786f98af4" }
# pingora-http = { version = "0.3.0" }
# pingora-http = { git = "https://github.com/escoffier/pingora", branch = "netns1" }
pingora-http = { git = "https://github.com/escoffier/pingora", rev = "ac71630159ee427b93f593341f3a929786f98af4" }
#  pingora-core = { version = "0.3.0", default-features = false }
# pingora-core = { git = "https://github.com/escoffier/pingora", branch = "netns1" }
pingora-core = { git = "https://github.com/escoffier/pingora", rev = "ac71630159ee427b93f593341f3a929786f98af4" }
# pingora-proxy = { version = "0.3.0" }
# pingora-proxy = { git = "https://github.com/escoffier/pingora", branch = "netns1" }
pingora-proxy = { git = "https://github.com/escoffier/pingora", rev = "ac71630159ee427b93f593341f3a929786f98af4" }
# pingora-runtime = { git = "https://github.com/escoffier/pingora", rev = "ac71630159ee427b93f593341f3a929786f98af4" }
# pingora-timeout = { git = "https://github.com/escoffier/pingora", rev = "ac71630159ee427b93f593341f3a929786f98af4" }
# pingora-error = { git = "https://github.com/escoffier/pingora", rev = "ac71630159ee427b93f593341f3a929786f98af4" }
# log = {}
libc = "0.2"
log = "0.4"
netns-rs = "0.1"
nix = { version = "0.28", features = ["socket", "sched", "uio", "fs", "ioctl", "user", "net", "mount"] }
env_logger = "0.9"
structopt = "0.3"
anyhow = "1.0"
tracing = { version = "0.1"}
tokio = "1"
# sentry = { version = "0.26", features = [
#     "backtrace",
#     "contexts",
#     "panic",
#     "reqwest",
#     "rustls",
# ], default-features = false }
# daemonize = "0.5.0"

# [target.'cfg(unix)'.dependencies]
# daemonize = "0.5.0"
# nix = "~0.24.3"
